--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,14 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.17",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native-paper": "^4.7.2",
+    "@expo/vector-icons": "^14.0.0",
+    "expo-image-picker": "~14.7.1",
+    "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.0.0",
+    "react-native-calendars": "*",
+    "@react-navigation/stack": "6.2.1",
+    "react-native-pager-view": "6.2.3",
+    "react-native-reanimated": "~3.6.2",
+    "@react-navigation/drawer": "6.4.1",
+    "@react-navigation/native": "6.0.10",
+    "expo-local-authentication": "~13.8.0",
+    "@react-navigation/elements": "1.3.3",
+    "react-native-gesture-handler": "~2.14.0",
+    "@react-navigation/bottom-tabs": "6.3.1",
+    "@react-navigation/native-stack": "6.6.1",
+    "react-native-safe-area-context": "4.8.2",
+    "@react-native-community/masked-view": "*",
+    "@react-navigation/material-top-tabs": "6.2.1",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-navigation/material-bottom-tabs": "6.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
   "private": true
 }
-
